# approx.pytorch

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  size_compute.py
src/: .gitignore  data_loader.py  func.py  layers.py  model.py  model_run.py  quant_func.py  quantized_model.py  setup_cpp.py  test_quant.py  train.ipynb  util.py
src/cpp/: .gitignore  Booth.py  CMakeLists.txt  gen_data.py  print_tensor.cu  tensor_compute.cu  test_cuda.cu  test_tensor.cu  torch_example.cpp  util.cpp
src/cpp/include/: approx_mul_dict.h  tensor_compute.cuh  torch_example.h  util.h
